<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_solve_problem"
    style="@style/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.detective.SolveProblem">

    <RelativeLayout
        style="@style/QuestionsLayout">

        <TextView
            android:id="@+id/textView1"
            style="@style/TextQuestion"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            style="@style/RadioGroup"
            android:layout_below="@id/textView1">

            <RadioButton
                android:id="@+id/radioQ1"
                style="@style/MButton"
                android:onClick="onRadioClick"
                android:text="@string/answer_1_1" />

            <RadioButton
                android:id="@+id/radioQ2"
                style="@style/MButton"
                android:onClick="onRadioClick"
                android:text="@string/answer_1_2" />

            <RadioButton
                android:id="@+id/radioQ3"
                style="@style/MButton"
                android:onClick="onRadioClick"
                android:text="@string/answer_1_3" />

            <RadioButton
                android:id="@+id/radioQ4"
                style="@style/MButton"
                android:onClick="onRadioClick"
                android:text="@string/answer_1_4" />

            <RadioButton
                android:id="@+id/radioQ5"
                style="@style/MButton"
                android:onClick="onRadioClick"
                android:text="@string/answer_1_5" />

        </RadioGroup>
    </RelativeLayout>
</ScrollView>
