<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_solve_problem3"
    style="@style/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.detective.SolveProblem3">

    <RelativeLayout style="@style/QuestionsLayout">

        <TextView
            android:id="@+id/textView1"
            style="@style/TextQuestion"
            android:padding="10dp"
            android:text="@string/question3" />

        <LinearLayout
            android:id="@+id/checkBoxGroup"
            style="@style/CheckBoxLayout.Questions">

            <CheckBox
                android:id="@+id/checkbox1"
                style="@style/MButton"
                android:onClick="onCheckBox"
                android:text="@string/answer_3_1" />

            <CheckBox
                android:id="@+id/checkbox2"
                style="@style/MButton"
                android:onClick="onCheckBox2"
                android:text="@string/answer_3_2" />

            <CheckBox
                android:id="@+id/checkbox3"
                style="@style/MButton"
                android:onClick="onCheckBox3"
                android:text="@string/answer_3_3" />

            <CheckBox
                android:id="@+id/checkbox4"
                style="@style/MButton"
                android:onClick="onCheckBox4"
                android:text="@string/answer_3_4" />

            <CheckBox
                android:id="@+id/checkbox5"
                style="@style/MButton"
                android:onClick="onCheckBox5"
                android:text="@string/answer_3_5" />
        </LinearLayout>

        <Button
            android:id="@+id/checkIt"
            style="@style/ButtonStart.Check"
            android:onClick="checkIt" />

    </RelativeLayout>
</ScrollView>
