<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_solve_problem2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Scroll"
    tools:context="com.example.android.detective.SolveProblem2">



    <RelativeLayout
        android:layout_width="@dimen/match"
        android:layout_height="@dimen/match">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="@dimen/match"
            style="@style/TextQuestion"
            android:layout_height="@dimen/wrap"
            android:text="@string/question2"
            />

        <RadioGroup
            android:id="@+id/radioGroup2"
            style="@style/RadioGroup"
            android:layout_below="@id/textView1"
            android:layout_width="@dimen/match"
            android:layout_height="@dimen/wrap" >

            <RadioButton
                android:id="@+id/radioQ6"
                style="@style/MRadioButton"
                android:onClick="onRadioClick2"
                android:text="@string/answer_2_1" />

            <RadioButton
                android:id="@+id/radioQ7"
                android:onClick="onRadioClick2"
                style="@style/MRadioButton"
                android:text="@string/answer_2_2"/>

            <RadioButton
                android:id="@+id/radioQ8"
                android:onClick="onRadioClick2"
                style="@style/MRadioButton"
                android:text="@string/answer_2_3" />

            <RadioButton
                android:id="@+id/radioQ9"
                android:onClick="onRadioClick2"
                style="@style/MRadioButton"
                android:text="@string/answer_2_4" />

            <RadioButton
                android:id="@+id/radioQ10"
                android:onClick="onRadioClick2"
                style="@style/MRadioButton"
                android:text="@string/answer_2_5" />

        </RadioGroup>

    </RelativeLayout>








</ScrollView>
